Phone > add background blur + fix hover btns on mobile

--- a/scss/components/_phone.scss
+++ b/scss/components/_phone.scss
@@ -32,35 +32,60 @@ $colorTalkAI: black;
 
 .phone__container {
   position: absolute;
-  top: 50%;
+  z-index: 2;
+  //   top: 50%;
+  backdrop-filter: blur(10px);
+  @supports not (backdrop-filter: blur(10px)) {
+    background: rgba($backgroundColorGreyPage, 0.8); // Fallback for browsers that do not support backdrop-filter
+  }
+  bottom: 0;
   left: 0;
   width: 100%;
   max-width: 872px;
   font-size: 12px;
   max-width: 100vw;
-  transform: translateY(-80%);
+  //   transform: translateY(-80%);
+  padding-bottom: 30px;
   opacity: 0;
   visibility: hidden;
+  pointer-events: none;
   transition: opacity 0.5s ease-in-out;
   color: $colorBlack;
 
   &.show {
     opacity: 1;
     visibility: visible;
+    pointer-events: auto;
   }
 
   &:hover {
     .phone__top > button {
       visibility: visible;
       opacity: 1;
+      @include media("<tablet") {
+        visibility: unset;
+        opacity: unset;
+      }
+    }
+  }
+
+  @include media("<tablet") {
+    &:active {
+      .phone__top > button {
+        visibility: visible;
+        opacity: 1;
+      }
     }
   }
 
   @include media("<tablet") {
     padding: 0 12px;
+    padding-bottom: 10px;
   }
 
   .phone__top {
+    max-width: 800px;
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
